# feed_recommend_online_serving

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  cloudbuild.yaml  evaluate_multilang_retrieval.py  locustfile.py  main.py  pyproject.toml  requirements.txt  run_recommendations_report.py
api/: app.py  schema.py
api/api_spec/: API_spec.md
modules/core/: recommend_feeds.py
modules/functions/: bigquery_fallback.py  hyde_embedding.py  trigger_hyde_generation.py  vector_search.py
modules/parameters/: config.yaml  parameters.yaml  retrieval_score_weights.yaml
modules/services/: calc_subscore.py  recommend_with_subscore.py  vector_recommendation.py
modules/utils/: bigquery.py  gcs.py  load_config.py  performance_logging.py  redis.py
test_metrics/: run_api_retrieval_metrics.py  test_metrics_config.yaml
test_metrics/data/: ground_truth_gold_top10.csv  recommendation_metrics_results.csv
test_metrics/prep_stuid_locust/: list_student_ids_from_gcs.py  student_ids.csv
tests/: test_api_contract.py  test_recommendation_helpers.py  test_recommendation_service.py
tests/test_multilang_reports/: Group1Case1.html  Group1Case2.html  Group1Case3.html  Group1Case4.html  Group2Case1.html  Group2Case2.html  Group2Case3.html  Group2Case4.html  Locust_2026-05-08-00h29_locustfile.py_https___feed-recommend-online-serving-810737581373.asia-southeast1.run.app (1).html  ground_truth_multilang.csv  recommendations_10_stu_20260507T115715Z.json  recommendations_10_stu_20260507T115715Z_metrics.csv
