[project]
name = "online-serving-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "redis>=6.4.0",
    "google-cloud-storage>=3.4.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-aiplatform>=1.111.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "locust>=2.31.0",
    "pytest>=8.0.0",
]
